trunk/Archive2/00/bd461184f2c755/output
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/tuple: In instantiation of 'constexpr std::_Head_base<_Idx, _Head, false>::_Head_base(const _Head&) [with long unsigned int _Idx = 4ul; _Head = int [3]]':
/usr/local/include/c++/4.9.2/tuple:255:44:   recursively required from 'constexpr std::_Tuple_impl<_Idx, _Head, _Tail ...>::_Tuple_impl(const _Head&, const _Tail& ...) [with long unsigned int _Idx = 1ul; _Head = X&; _Tail = {const X&, double (&)[10], int [3]}]'
/usr/local/include/c++/4.9.2/tuple:255:44:   required from 'constexpr std::_Tuple_impl<_Idx, _Head, _Tail ...>::_Tuple_impl(const _Head&, const _Tail& ...) [with long unsigned int _Idx = 0ul; _Head = X; _Tail = {X&, const X&, double (&)[10], int [3]}]'
/usr/local/include/c++/4.9.2/tuple:398:33:   required from 'constexpr std::tuple< <template-parameter-1-1> >::tuple(const _Elements& ...) [with _Elements = {X, X&, const X&, double (&)[10], int [3]}]'
main.cpp:5:52:   required from 'std::tuple<_Elements ...> foo(Ts&& ...) [with Ts = {X, X&, const X&, double (&)[10], int [3]}]'
main.cpp:19:73:   required from here
/usr/local/include/c++/4.9.2/tuple:134:25: error: array used as initializer
       : _M_head_impl(__h) { }
                         ^
/usr/local/include/c++/4.9.2/tuple: In instantiation of 'constexpr std::_Head_base<_Idx, _Head, false>::_Head_base(_UHead&&) [with _UHead = int [3]; <template-parameter-2-2> = void; long unsigned int _Idx = 4ul; _Head = int [3]]':
/usr/local/include/c++/4.9.2/tuple:271:42:   required from 'constexpr std::_Tuple_impl<_Idx, _Head, _Tail ...>::_Tuple_impl(std::_Tuple_impl<_Idx, _Head, _Tail ...>&&) [with long unsigned int _Idx = 4ul; _Head = int [3]; _Tail = {}]'
/usr/local/include/c++/4.9.2/type_traits:900:43:   required by substitution of 'template<class _Tp, class _Arg, class> static std::true_type std::__do_is_direct_constructible_impl::__test(int) [with _Tp = std::_Tuple_impl<4ul, int [3]>; _Arg = std::_Tuple_impl<4ul, int [3]>&&; <template-parameter-1-3> = <missing>]'
/usr/local/include/c++/4.9.2/type_traits:912:43:   required from 'struct std::__is_direct_constructible_impl<std::_Tuple_impl<4ul, int [3]>, std::_Tuple_impl<4ul, int [3]>&&>'
/usr/local/include/c++/4.9.2/type_traits:134:12:   required from 'struct std::__and_<std::is_destructible<std::_Tuple_impl<4ul, int [3]> >, std::__is_direct_constructible_impl<std::_Tuple_impl<4ul, int [3]>, std::_Tuple_impl<4ul, int [3]>&&> >'
/usr/local/include/c++/4.9.2/type_traits:916:12:   required from 'struct std::__is_direct_constructible_new_safe<std::_Tuple_impl<4ul, int [3]>, std::_Tuple_impl<4ul, int [3]>&&>'
/usr/local/include/c++/4.9.2/type_traits:994:12:   [ skipping 48 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/c++/4.9.2/type_traits:1169:12:   required from 'struct std::__is_nothrow_move_constructible_impl<std::_Tuple_impl<1ul, X&, const X&, double (&)[10], int [3]>, true>'
/usr/local/include/c++/4.9.2/type_traits:1175:12:   required from 'struct std::is_nothrow_move_constructible<std::_Tuple_impl<1ul, X&, const X&, double (&)[10], int [3]> >'
/usr/local/include/c++/4.9.2/type_traits:134:12:   required from 'struct std::__and_<std::is_nothrow_move_constructible<X>, std::is_nothrow_move_constructible<std::_Tuple_impl<1ul, X&, const X&, double (&)[10], int [3]> > >'
/usr/local/include/c++/4.9.2/tuple:267:7:   required from 'constexpr std::_Tuple_impl<_Idx, _Head, _Tail ...>::_Tuple_impl(std::_Tuple_impl<_Idx, _Head, _Tail ...>&&) [with long unsigned int _Idx = 0ul; _Head = X; _Tail = {X&, const X&, double (&)[10], int [3]}]'
main.cpp:5:52:   required from 'std::tuple<_Elements ...> foo(Ts&& ...) [with Ts = {X, X&, const X&, double (&)[10], int [3]}]'
main.cpp:19:73:   required from here
/usr/local/include/c++/4.9.2/tuple:140:42: error: array used as initializer
  : _M_head_impl(std::forward<_UHead>(__h)) { }
                                          ^
